# pico-w-smart-monitor

./: .gitignore  CMakeLists.txt  HARDWARE.md  LICENSE  README.md  SKILL.md  TODO.md  build.bat
cmake/: fetch_sdk.cmake
src/: main.c
src/display/: font.c  font.h  ssd1306.c  ssd1306.h
src/sensors/: joystick.c  joystick.h
src/utils/: uart_log.c  uart_log.h
